// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateHeader component should match snapshot with suffix 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DateHeader
    dateLineString="date-1531152392-index-2"
    index={2}
    theme={
      Object {
        "centerChannelBg": "#aaa",
        "centerChannelColor": "#aaa",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            }
          }
        />,
        <Component
          style={
            Object {
              "marginHorizontal": 15,
            }
          }
        >
          <InjectIntl(FormattedDate)
            day="2-digit"
            month="short"
            style={
              Object {
                "color": "#aaa",
                "fontSize": 14,
                "fontWeight": "600",
              }
            }
            value={1970-01-18T17:19:12.392Z}
            weekday="short"
            year="numeric"
          />
        </Component>,
        <Component
          style={
            Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            }
          }
        />,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 28,
          "marginTop": 8,
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#aaa",
            "flex": 1,
            "height": 1,
            "opacity": 0.2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <InjectIntl(FormattedDate)
            day="2-digit"
            month="short"
            style={
              Object {
                "color": "#aaa",
                "fontSize": 14,
                "fontWeight": "600",
              }
            }
            value={1970-01-18T17:19:12.392Z}
            weekday="short"
            year="numeric"
          />,
          "style": Object {
            "marginHorizontal": 15,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "day": "2-digit",
            "month": "short",
            "style": Object {
              "color": "#aaa",
              "fontSize": 14,
              "fontWeight": "600",
            },
            "value": 1970-01-18T17:19:12.392Z,
            "weekday": "short",
            "year": "numeric",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#aaa",
            "flex": 1,
            "height": 1,
            "opacity": 0.2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "#aaa",
                "flex": 1,
                "height": 1,
                "opacity": 0.2,
              }
            }
          />,
          <Component
            style={
              Object {
                "marginHorizontal": 15,
              }
            }
          >
            <InjectIntl(FormattedDate)
              day="2-digit"
              month="short"
              style={
                Object {
                  "color": "#aaa",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
              value={1970-01-18T17:19:12.392Z}
              weekday="short"
              year="numeric"
            />
          </Component>,
          <Component
            style={
              Object {
                "backgroundColor": "#aaa",
                "flex": 1,
                "height": 1,
                "opacity": 0.2,
              }
            }
          />,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 28,
            "marginTop": 8,
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <InjectIntl(FormattedDate)
              day="2-digit"
              month="short"
              style={
                Object {
                  "color": "#aaa",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
              value={1970-01-18T17:19:12.392Z}
              weekday="short"
              year="numeric"
            />,
            "style": Object {
              "marginHorizontal": 15,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "day": "2-digit",
              "month": "short",
              "style": Object {
                "color": "#aaa",
                "fontSize": 14,
                "fontWeight": "600",
              },
              "value": 1970-01-18T17:19:12.392Z,
              "weekday": "short",
              "year": "numeric",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "intl": Object {
        "formatMessage": [MockFunction],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`DateHeader component should match snapshot without suffix 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DateHeader
    dateLineString="date-1531152392"
    index={0}
    theme={
      Object {
        "centerChannelBg": "#aaa",
        "centerChannelColor": "#aaa",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            }
          }
        />,
        <Component
          style={
            Object {
              "marginHorizontal": 15,
            }
          }
        >
          <InjectIntl(FormattedDate)
            day="2-digit"
            month="short"
            style={
              Object {
                "color": "#aaa",
                "fontSize": 14,
                "fontWeight": "600",
              }
            }
            value={1970-01-18T17:19:12.392Z}
            weekday="short"
            year="numeric"
          />
        </Component>,
        <Component
          style={
            Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            }
          }
        />,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 28,
          "marginTop": 8,
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#aaa",
            "flex": 1,
            "height": 1,
            "opacity": 0.2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <InjectIntl(FormattedDate)
            day="2-digit"
            month="short"
            style={
              Object {
                "color": "#aaa",
                "fontSize": 14,
                "fontWeight": "600",
              }
            }
            value={1970-01-18T17:19:12.392Z}
            weekday="short"
            year="numeric"
          />,
          "style": Object {
            "marginHorizontal": 15,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "day": "2-digit",
            "month": "short",
            "style": Object {
              "color": "#aaa",
              "fontSize": 14,
              "fontWeight": "600",
            },
            "value": 1970-01-18T17:19:12.392Z,
            "weekday": "short",
            "year": "numeric",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#aaa",
            "flex": 1,
            "height": 1,
            "opacity": 0.2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "#aaa",
                "flex": 1,
                "height": 1,
                "opacity": 0.2,
              }
            }
          />,
          <Component
            style={
              Object {
                "marginHorizontal": 15,
              }
            }
          >
            <InjectIntl(FormattedDate)
              day="2-digit"
              month="short"
              style={
                Object {
                  "color": "#aaa",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
              value={1970-01-18T17:19:12.392Z}
              weekday="short"
              year="numeric"
            />
          </Component>,
          <Component
            style={
              Object {
                "backgroundColor": "#aaa",
                "flex": 1,
                "height": 1,
                "opacity": 0.2,
              }
            }
          />,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 28,
            "marginTop": 8,
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <InjectIntl(FormattedDate)
              day="2-digit"
              month="short"
              style={
                Object {
                  "color": "#aaa",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
              value={1970-01-18T17:19:12.392Z}
              weekday="short"
              year="numeric"
            />,
            "style": Object {
              "marginHorizontal": 15,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "day": "2-digit",
              "month": "short",
              "style": Object {
                "color": "#aaa",
                "fontSize": 14,
                "fontWeight": "600",
              },
              "value": 1970-01-18T17:19:12.392Z,
              "weekday": "short",
              "year": "numeric",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#aaa",
              "flex": 1,
              "height": 1,
              "opacity": 0.2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "intl": Object {
        "formatMessage": [MockFunction],
      },
    },
    "hydrateIn": undefined,
  },
}
`;
